# ecommerce-site

./: .gitignore  README.md  docker-compose.yml  tailwind.config.cjs
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/website/: .env  __init__.py  auth.py  auth_middleware.py  cart.py  models.py  orders.py  sample_products.csv  seed.py  views.py
backend/website/static/: main.css
backend/website/static/frontend/: index.html
backend/website/static/frontend/assets/: index-Cnxn4oUo.js  index-CxsH9lAW.css
backend/website/templates/: accessories.html  base.html  home.html  login.html  men.html  shop.html  signup.html  women.html
frontend/: index.html  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Navbar.jsx  ProductCard.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Cart.jsx  CategoryPage.jsx  Home.jsx  Login.jsx  OrderDetails.jsx  OrderPlaced.jsx  Orders.jsx  ProductPage.jsx  Register.jsx  Signup.jsx
