[project]
name = "ecommerce-backend"
version = "0.1.0"
description = "Flask backend for the Ecommerce application"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Project Maintainer" }
]
dependencies = [
  "Flask==3.1.2",
  "Flask-SQLAlchemy==3.1.1",
  "Flask-CORS==4.0.0",
  "Flask-Login==0.6.3",
  "python-dotenv==1.0.0",
  "psycopg2-binary==2.9.6",
  "PyJWT==2.8.0",
  "gunicorn==21.2.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-