[project]
name = "ecommerce-backend"
version = "0.1.0"
description = "Flask backend for ecommerce application"
requires-python = ">=3.11"

dependencies = [
  "Flask==3.1.2",
  "Flask-SQLAlchemy==3.1.1",
  "Flask-CORS==4.0.0",
  "psycopg[binary]==3.1.18",
  "python-dotenv==1.0.0",
  "Flask-Login==0.6.3",
  "gunicorn==21.2.0",
  "PyJWT>=2.8.0",
  "Werkzeug>=3.0.0"
]
